Add the drawing area's bounding box
This just adds the area where the canvas will be. For now it is just a
marker to show where the JavaScript should put each cell.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
 
     <body>
-
+        <!-- Title area -->
+        <h1 id="title-area">Etch-a-sketch</h1>
+        <div id="drawing-area">
+            <p>Drawing Area Here</p>
+        </div>
     </body>
 </html>
