--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <body>
         <!-- Title area -->
         <h1 id="title-area">Etch-a-sketch</h1>
+
+        <!-- Sizing Button Area -->
+        <button id="sizing-button"><p>Resize drawing area</p></button>
+
+        <!-- Drawing Area -->
         <div id="drawing-area">
         </div>
     </body>
