--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <!-- Title area -->
         <h1 id="title-area">Etch-a-sketch</h1>
 
-        <!-- Sizing Button Area -->
-        <button id="sizing-button"><p>Resize drawing area</p></button>
+        <!-- Button Area -->
+        <div id=button-area>
+            <button id="sizing-button"><p>Resize drawing area</p></button>
+            <button id="random-color-button"><p>Random color</p></button>
+            <button id="gray-scale-button"><p>Gray scale</p></button>
+        </div>
 
         <!-- Drawing Area -->
         <div id="drawing-area">
