--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- Button Area -->
         <div id=button-area>
-            <button id="sizing-button"><p>Resize drawing area</p></button>
+            <button id="sizing-button"><p>Resize drawing</p></button>
             <button id="random-color-button"><p>Random color</p></button>
             <button id="gray-scale-button"><p>Gray scale</p></button>
         </div>
