Add and style 2 more buttons, black brush and save
These are just for show and their features will be added in a future
implementation.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <button id="sizing-button"><p>Resize drawing</p></button>
             <button id="random-color-button"><p>Random color</p></button>
             <button id="gray-scale-button"><p>Gray scale</p></button>
+            <button id="black-brush-button"><p>Black brush</p></button>
+            <button id="save-as-png-button"><p>Save as PNG</p></button>
         </div>
 
         <!-- Drawing Area -->
