--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Etch-a-sketch</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
         <script src="index.js" defer></script>
         <!-- <link rel="icon" href="images/some-favicon.png" type="image/x-icon"> -->
     </head>
